--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -33,10 +33,10 @@
   name = "github.com/PuerkitoBio/purell"
   version = "1.1.0"
 
-[[constraint]]
-  name = "github.com/davecgh/go-spew"
-  version = "1.1.0"
 
 [prune]
   go-tests = true
-  unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/armon/go-radix"
